--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-snowflake-snowpark-python
-snowflake-connector-python
-snowflake
-snowflake-cli-labs
+snowflake-snowpark-python==1.23.0
+snowflake-connector-python==3.12.2
+snowflake==0.13.1
+snowflake-cli-labs==3.0.1
