--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -31,7 +31,10 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Install Python snowflake-snowpark-python
-        run: conda install -r snowflake-snowpark-python
+        run: conda install snowflake-snowpark-python
+
+      - name: Install Python snowflake -U
+        run: pip install snowflake -U
 
       - name: Deploy Snowpark apps
         working-directory: first_snowpark_project
