--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,4 @@
-annotated-types==0.7.0
-asn1crypto==1.5.1
-atpublic==5.0
-backports.tarfile==1.2.0
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==3.4.0
-click==8.1.7
-cloudpickle==2.2.1
-cryptography==43.0.1
-filelock==3.16.1
-gitdb==4.0.11
-GitPython==3.1.43
-idna==3.10
-importlib_metadata==8.5.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jaraco.functools==4.1.0
-jeepney==0.8.0
-Jinja2==3.1.4
-keyring==25.4.1
-markdown-it-py==3.0.0
-MarkupSafe==3.0.1
-mdurl==0.1.2
-more-itertools==10.5.0
-packaging==24.1
-platformdirs==4.3.6
-pluggy==1.5.0
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-Pygments==2.18.0
-PyJWT==2.9.0
-pyOpenSSL==24.2.1
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-requests==2.32.3
-requirements-parser==0.11.0
-rich==13.8.1
-SecretStorage==3.3.3
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-snowflake==0.13.1
-snowflake-cli==3.0.1
-snowflake-cli-labs==3.0.1
-snowflake-connector-python==3.12.2
-snowflake-snowpark-python==1.23.0
-snowflake._legacy==0.13.0
-snowflake.core==0.13.1
-sortedcontainers==2.4.0
-tomlkit==0.13.2
-typer==0.12.5
-types-setuptools==75.1.0.20240917
-typing_extensions==4.12.2
-urllib3==2.2.3
-zipp==3.20.2
+snowflake-cli-labs
+snowflake
+snowflake-snowpark-python
+snowflake-connector-python
